.logs/inpainting-26448870-4294967294.out
Removing conda
Loading conda
  File "/work/pi_miyyer_umass_edu/ctpham/cs670-manga/model_torch.py", line 342
    'line_folder': line_image_output_folder,
                 ^
SyntaxError: invalid syntax
